deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: html2pdf
  labels:
    name: html2pdf
    app: html2pdf-service
